# react-native-yoga-jsi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-yoga-jsi.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  BUILD_ERROR.yml  FEATURE_REQUEST.yml  QUESTION.yml  config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/yogajsi/: YogaJSIModule.java  YogaJSIPackage.java
cpp/: configCreation.h  macros.h  nodeCreation.h  nodeProperties.h  yogaJSI.h
example/: app.json  babel.config.js  index.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: Podfile
example/ios/YogaJSIExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/YogaJSIExample.xcodeproj/: project.pbxproj
example/ios/YogaJSIExample.xcodeproj/xcshareddata/xcschemes/: YogaJSIExample.xcscheme
example/ios/YogaJSIExample.xcworkspace/: contents.xcworkspacedata
example/ios/YogaJSIExampleTests/: YogaJSIExampleTests.m
example/src/navigators/: Root.tsx  RootProps.ts
example/src/navigators/children/Entry/: Entry.tsx  TextDemo.tsx
ios/: YogaJSIModule.h  YogaJSIModule.mm
src/: coreTypes.ts  index.ts
src/derived/: index.ts  styleHandler.ts  useOnDepsChaneg.ts  useStyle.ts  utils.ts
testProj/: app.json  jest.config.js  package.json
testProj/android/: settings.gradle
testProj/ios/: .xcode.env.local  Podfile
testProj/ios/testProj/: AppDelegate.mm  Info.plist
testProj/ios/testProj.xcodeproj/: project.pbxproj
testProj/src/assets/: index.ts
testProj/src/components/: Button.tsx  SkiaComps.tsx  Slider.tsx  Spacers.tsx  Switch.tsx  helpers.ts  index.ts
testProj/src/navigators/: Root.tsx  RootProps.ts
testProj/src/navigators/children/AnimatedExample/: AnimatedExample.tsx  InfoBox.tsx  Slider.tsx  SnapPoints.tsx
testProj/src/navigators/children/AnimatedTextLayout/: AnimatedTextLayout.tsx  BackgroundImage.tsx  useText.ts  utils.ts
testProj/src/navigators/children/ApiTests/: ApiTests.tsx
testProj/src/navigators/children/ApiTests/tests/: helpers.ts  (+5 more)
testProj/src/navigators/children/Benchmarks/: Benchmarks.tsx
testProj/src/navigators/children/Entry/: Entry.tsx
testProj/src/navigators/children/TextLayout/: TextLayout.tsx
testProj/src/styles/: colors.ts
(+6 files in other folders)
